--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,9 @@
     tools:context=".MainActivity"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/image_test"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:src="@mipmap/ic_launcher"/>
-
-    <TextView
-        android:id="@+id/text_test"
-        android:text="Teste"
-        android:textSize="26sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image_test"
-        android:layout_marginLeft="8dp"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/hero_item" />
 
 </RelativeLayout>
