--- a/app/src/main/res/layout/hero_item.xml
+++ b/app/src/main/res/layout/hero_item.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/image_test"
+        android:id="@+id/image"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:src="@mipmap/ic_launcher"/>
 
     <TextView
-        android:id="@+id/text_test"
+        android:id="@+id/text_name"
         android:text="Teste"
         android:textSize="26sp"
         android:layout_width="wrap_content"
