--- a/app/src/main/res/layout/hero_item.xml
+++ b/app/src/main/res/layout/hero_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/image"
@@ -16,7 +18,7 @@
         android:textSize="26sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image_test"
+        android:layout_toRightOf="@id/image"
         android:layout_marginLeft="8dp"/>
 
 </RelativeLayout>
