--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,9 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/image_description"/>
 
         <TextView
             android:id="@+id/text_detail_name"
@@ -23,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/image_detail"
             android:padding="16dp"
-            android:text="Nome"
+            android:text="@string/nameHolder"
             android:textSize="26sp" />
 
         <TextView
@@ -32,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/text_detail_name"
             android:padding="16dp"
-            android:text="Ut fringilla metus ac risus laoreet dapibus. Fusce in lectus est. Nullam convallis efficitur eros eget auctor. Nulla facilisi. Proin vel enim sed dolor malesuada rutrum sed ut metus. Integer vel auctor leo. Vivamus rhoncus tortor tempus, ornare diam at, maximus nulla. Nullam ut imperdiet risus. Donec molestie laoreet ex, sed vestibulum magna aliquet a."
+            android:text="@string/descriptionHolder"
             android:textSize="16sp" />
 
 
